# sonar

./: .gitignore  README.md  pyproject.toml  requirments.txt  run.py
agent/: actions.py  brain.py  config.py  stt.py  tts.py  wake.py
