[project]
name = "sonar"
version = "0.0.1"
description = "Sonar is desktop assistant enabled with intent and voice detection built using Tauri-Rust and Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepgram-sdk>=4.8.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "playsound==1.2.2",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "silero-vad>=6.0.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.2",
    "torchaudio>=2.8.0",
    "vosk>=0.3.45",
    "webrtcvad>=2.0.10",
    "wheel>=0.45.1",
    "whisper>=1.1.10",
]
